# tangents

./: .gitignore  Makefile  README.md  docker-compose.yml  tangents_spec.md  tasks.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0082d55b2e58_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: branches.py  chats.py  settings.py  share_links.py
backend/app/services/: compression.py  encryption.py  history.py  title.py
backend/tests/: conftest.py  test_branches.py  test_chats.py  test_services.py
backend/tests/e2e/: conftest.py  test_live_llm.py  test_ui_flows.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: branches.ts  chats.ts  client.ts  settings.ts  share.ts
frontend/src/components/chat/: ChatList.tsx  ChatView.tsx  MessageInput.tsx  MessageList.tsx  ModelPicker.tsx
frontend/src/components/graph/: CommitDotNode.tsx  GraphView.tsx  NodeControls.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/components/settings/: SettingsPage.tsx
frontend/src/components/share/: ShareView.tsx
frontend/src/hooks/: useChat.ts  useKeybindings.ts  useStream.ts
frontend/src/store/: appStore.ts
frontend/src/test/: Auth.test.tsx  ChatList.test.tsx  ChatView.test.tsx  CommitDotNode.test.tsx  MessageInput.test.tsx  NodeControls.test.tsx  SettingsPage.test.tsx  appStore.test.ts  setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts  server.ts
frontend/src/types/: index.ts
